fixed dropdown menu visibility issue

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -74,7 +74,6 @@ body{
   height: 100%;
 }
 
-/* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: white;
   color: black;
@@ -84,18 +83,18 @@ body{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: rgb(238, 238, 238);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 2;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
+  display: block;
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
   text-align: left;
 }
 
@@ -106,7 +105,7 @@ body{
 }
 
 /* Show the dropdown menu on hover */
-.dropbtn:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
   display: block;
 }
 
